--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,11 +24,12 @@ a {
 }
 
 .btn {
-  @apply font-bold py-2 px-4 rounded-md bg-teal-500 text-white hover:bg-teal-700;
+  @apply text-white bg-gradient-to-r transition-all duration-500 from-cyan-700 via-emerald-500 to-teal-500 bg-size-200 bg-pos-0 hover:bg-pos-100;
+/* }bg-gradient-to-r from-cyan-500 to-teal-500 text-white */
 }
 
-.btn_outliner {
-  @apply bg-transparent hover:bg-teal-500 text-teal-700 font-semibold hover:text-white py-2 px-4 border border-teal-500 hover:border-transparent rounded-md;
+.btn_text_portfolio {
+  @apply  font-semibold py-2 px-4 rounded-md;
 
 }
 
