--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -11,7 +11,7 @@
 }
 
 .head{
-  @apply py-20;
+  @apply pt-20;
 }
 
 .title {
@@ -39,8 +39,7 @@
 }
 
 .color-container {
-  border-color: rgb(163, 163, 163);
-  background: rgb(250, 250, 250);
+  @apply bg-white border-gray-400;
 }
 
 .experience_title {
@@ -56,16 +55,23 @@
 }
 
 .article-container {
-  display: flex;
-  text-align: initial;
-  flex-wrap: wrap;
-  flex-direction: row;
-  gap: 2.5rem;
-  justify-content: space-around;
+  @apply flex text-start flex-wrap flex-row gap-10 justify-around;
 }
 
-.about_containers {
-  @apply flex grid grid-cols-2 gap-4 dark:text-gray-200 lg:grid-cols-3;
+.skills_containers {
+  @apply flex grid grid-cols-1 gap-4 dark:text-gray-200 md:grid-cols-2 lg:grid-cols-3;
+}
+
+.projects_containers {
+  @apply flex grid grid-cols-1 gap-4 dark:text-gray-200;
+}
+
+.button {
+  @apply mx-4;
+}
+
+.project_title {
+  @apply m-4 text-center text-gray-700 dark:text-gray-100;
 }
 
 @font-face {
@@ -74,4 +80,3 @@
   font-weight: normal;
   font-style: normal;
 }
-/* lex flex-col gap-10 py-10 lg:flex-row lg:flex-wrap */
