--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,10 @@ a {
   @apply transition-colors duration-200;
 }
 
+.navigation {
+  @apply pt-10 pb-0 md:py-10 mb-10 flex justify-between;
+}
+
 .cards {
   @apply p-6 rounded-4xl border-2 border-gray-400 border-solid text-center;
 }
