--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,5 +1,5 @@
 .main {
-  @apply bg-white px-10 md:px-20 lg:px-40 dark:bg-gray-900;
+  @apply bg-white px-5 md:px-20 lg:px-40 dark:bg-gray-900;
 }
 
 .header{
@@ -7,7 +7,7 @@
 }
 
 .name {
-  @apply text-5xl text-teal-600 font-medium md:text-6xl;
+  @apply text-5xl text-teal-600 space-y-0 font-medium md:text-6xl;
 }
 
 .head{
@@ -19,7 +19,7 @@
 }
 
 .conv {
-  @apply text-center text-gray-500 pb-4 dark:text-gray-400;
+  @apply text-center text-gray-500 space-y-0 dark:text-gray-400;
 }
 
 .summary {
@@ -35,7 +35,7 @@
 }
 
 .profilePicture { 
-  @apply relative rounded-full w-80 h-80 mt-10 mb-10 mx-auto overflow-hidden md:w-96 md:h-96;
+  @apply relative rounded-full w-80 h-80 my-10 mx-auto overflow-hidden md:w-96 md:h-96;
 }
 
 .color-container {
